--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,7 +1,9 @@
 header.header
+    a(href=routes.home)
+        h1 #{siteName}
     .header__column
         ul
             li
-                a(href="#") Join
+                a(href=routes.join) Join
             li
-                a(href="#") Login
+                a(href=routes.login) Login
